# ostrich

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CITATION.cff  CMakeLists-External.txt  CMakeLists.txt  Dockerfile  Doxyfile  README.md  run-debug.sh  run.sh
.github/workflows/: ostrich_test.yml
ext/boost/: CMakeLists.txt
ext/gtest/: CMakeLists.txt
ext/hunter/: HunterGate.cmake
plots/: patchsize.gplot
plots/insert_increasingpatchcount/: patchcount.gplot
plots/lookup/: lookup.gplot
plots/sizes/: sizes.gplot
src/main/cpp/: compute_statistics.cc  insert.cc  query.cc  query_delta_materialized.cc  query_version.cc  query_version_materialized.cc  simpleprogresslistener.cc  simpleprogresslistener.h  test.cc
src/main/cpp/controller/: controller.cc  controller.h  metadata_manager.cc  metadata_manager.h  patch_builder.cc  patch_builder.h  patch_builder_streaming.cc  patch_builder_streaming.h  snapshot_creation_strategy.cc  snapshot_creation_strategy.h  snapshot_patch_iterator_triple_id.cc  snapshot_patch_iterator_triple_id.h  snapshot_patch_iterator_triple_string.cc  snapshot_patch_iterator_triple_string.h  statistics.cc  statistics.h  triple_delta_iterator.cc  triple_delta_iterator.h  triple_versions_iterator.cc  triple_versions_iterator.h
src/main/cpp/dictionary/: PlainDictionary.cpp  dictionary.cc  dictionary.cpp  dictionary_manager.cc  dictionary_manager.h
src/main/cpp/evaluate/: evaluator.cc  evaluator.h
src/main/cpp/index/: triple_pattern_index.cc  triple_pattern_index.h
src/main/cpp/patch/: interval_list.h  patch.cc  patch.h  patch_element.cc  patch_element.h  patch_element_comparator.cc  patch_element_comparator.h  patch_element_iterator.cc  patch_element_iterator.h  patch_elements.cc  patch_elements.h  patch_tree.cc  patch_tree.h  patch_tree_addition_value.cc  patch_tree_addition_value.cpp  patch_tree_addition_value.h  patch_tree_deletion_value.cc  patch_tree_deletion_value.h  patch_tree_iterator.cc  patch_tree_iterator.h  patch_tree_key_comparator.cc  patch_tree_key_comparator.h  patch_tree_manager.cc  patch_tree_manager.h  patch_tree_value.cc  patch_tree_value.h  positioned_triple_iterator.cc  positioned_triple_iterator.h  triple.cc  triple.h  triple_comparator.cc  triple_comparator.h  triple_iterator.cc  triple_iterator.h  triple_store.cc  triple_store.h  variable_size_integer.h
src/main/cpp/snapshot/: combined_triple_iterator.cc  combined_triple_iterator.h  iterator_triple_id_to_string.cc  iterator_triple_id_to_string.h  snapshot_manager.cc  snapshot_manager.h  sorted_triple_iterator.cc  sorted_triple_iterator.h  vector_triple_iterator.cc  vector_triple_iterator.h
src/test/cpp/: bear.cc  performance.cc
src/test/cpp/controller/: controller.cc
src/test/cpp/dictionary/: dictionary.cc  dictionary_manager.cc
src/test/cpp/patch/: dictionary.cc  interval_list.cc  patch.cc  patch_element.cc  patch_elements.cc  patch_tree.cc  patch_tree_addition_value.cc  patch_tree_deletion_value.cc  patch_tree_key_comparator.cc  patch_tree_manager.cc  patch_tree_value.cc  test.cc  test_patch_elements.cc  triple.cc  variable_size_integer.cc
src/test/cpp/snapshot/: snapshot_manager.cc
test/: dictionary_test.cc
tools/: README.md  average.js  download_bear_data.sh  extract_bear_data.sh  patch_bear_data.sh  prepare_bear_data.sh  structure_all_output.sh  structure_eval_output.sh
